<resources>
    <string name="app_name">adoro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="you_have_no_agreement">You have no agreement !</string>
    <string name="please_ret_again">Please Retry Again</string>
    <string name="managed_by_company">Managed by ADORO</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="create_an_account">Create an Account</string>
    <string name="create_account">Create Account</string>
    <string name="email_address">Email Address</string>
    <string name="username">username</string>
    <string name="full_name">Full Name</string>
    <string name="otp_sent_please_verify">Verify OTP</string>
    <string name="enter_otp">Enter OTP Sent</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="lets_start">"Let's Start"</string>
    <string name="associayted_email">Enter the email id associated with your account and we will send recovery email</string>
    <string name="congratuations">Congratuations</string>
    <string name="not_having_account">"Don't have an account?"</string>
    <string name="signup_here">Signup Here</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_of_service_and_privacy_policy">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="continue_">Continue</string>
    <string name="login_here">Log in</string>
    <string name="already_having_account">Already having an account?</string>
    <string name="your_account_is_created_n_head_over_and_kikstart_profile">
    <br>
        Your account is created \n
    </br>
         <br>
        Head over and Kikstart profile
    </br>
     </string>
    <string name="ok">OK</string>
    <string name="account">Account</string>
    <string name="upload_your_design">Upload Your Design</string>
    <string name="accept_terms_amp_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="choose_design">Choose Design</string>
    <string name="upload_meme">Upload Meme</string>
    <string name="publish">Publish</string>
    <string name="upload_design">Upload Design</string>
    <string name="description">Description</string>
    <string name="your_post_will_be_live_soon">Your post haas been submitted</string>
    <string name="change">Change</string>
    <string name="learn_more">Learn more</string>
    <string name="update_profile_image">Update Profile</string>
    <string name="street_address">Street Address</string>
    <string name="landmark">Landmark</string>
    <string name="area_name">Area Name</string>
    <string name="state_name">State Name</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string name="bank_information">Bank Information</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_number">Account Number</string>
    <string name="ifsc_code">IFSC Code</string>
    <string name="update_profile">Update Profile</string>
    <string name="basic_information">Personal Information</string>
    <string name="also_liked_the_post">also liked the post</string>
    <string name="my_groups">My Community</string>
    <string name="browse_groups">Browse Community</string>
    <string name="enter">Enter</string>
    <string name="comment">Comment...</string>
    <string name="announcement">Announcement</string>
    <string name="post">Post</string>
    <string name="discussion">Discussion</string>
    <string name="create_group">Create Community</string>
    <string name="group_name">Community Name</string>
    <string name="what_group_is_about">What Community is about</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="adoro_coins">Cash Coins</string>
    <string name="refer">Refer</string>
    <string name="result">Result</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="privacy">Privacy</string>
    <string name="search">Search</string>
    <string name="follow">Follow</string>
    <string name="following">Following</string>
    <string name="my_template">My Template</string>
    <string name="browse_template">Browse Template</string>
    <string name="template">Template</string>
    <string name="see_result">See Result</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="verify_number">Verify Number</string>
    <string name="username_already_taken">Username already taken!</string>
    <string name="user_already_registered">User is already registered with us!</string>
    <string name="Something_went_wrong">Something went wrong!</string>
    <string name="total_coins_earned">Total coins earned:</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="accounts">Account</string>
    <string name="campaign">Campaign</string>
    <string name="groups">Community</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="city">City</string>
    <string name="report">Report</string>
    <string name="accept">Accept</string>
    <string name="joining_requests">Joining Requests</string>
    <string name="people_who_are_willing_to_join_your_group">People who are willing to join your Community</string>
    <string name="group_creation">Community Creation</string>
    <string name="group_members">Community Members</string>
    <string name="create_template">Create Template</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="bio">Bio</string>
    <string name="select">Select</string>
    <string name="inbox">Inbox</string>
    <string name="submit">Submit</string>
    <string name="verify">Verify</string>
    <string name="app_share_msg">When your friends will download the app with the referal code, you will get instant Rs. 2 in your wallet . And when your friend earn its first earning , then you will also get 5% from there first earning</string>
    <string name="copy_the_link_below_share_it_with_your_friends"><![CDATA[Copy the link below & share it with your friends]]></string>
    <string name="share">Share</string>
    <string name="coins">Coins</string>
    <string name="you_have_earned">You have earned</string>
    <string name="withdrawl_amount">Withdrawl Amount</string>
    <string name="enter_the_withdrawl_amount">Enter the withdrawl amount</string>
    <string name="browse_community">Browse Community</string>
    <string name="create_community">Create Community</string>
    <string name="results">Results</string>
    <string name="posts">Posts</string>
    <string name="fans">Fans</string>
    <string name="choose_your_meme">Choose your meme</string>
    <string name="add">Add</string>
    <string name="upload">Upload</string>
    <string name="new_profile">New Profile</string>
    <string name="existing">Existing</string>
    <string name="requested">Requested</string>
    <string name="members">Members</string>
    <string name="update_dp">Update DP</string>
</resources>
