<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/custom_toolbar"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp"
            app:contentPadding="15dp"
            android:elevation="1dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="5dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_meme"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_choose_design"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="40dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:background="@drawable/bg_button_red"
                    android:paddingVertical="4dp"
                    android:text="@string/choose_design"
                    android:textColor="@color/buttonTextColor" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/accept_terms_amp_conditions"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_upload_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="4dp"
            android:background="@drawable/bg_button_red"
            android:text="@string/upload_your_design"
            android:textColor="@color/buttonTextColor"/>
    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/pb_campaign_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
